--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SFHS Machine Learning Club</title>
-  <meta name="description" content="SFHS Machine Learning Club — learn ML, build projects, compete, and have fun. Monthly meetings on Thursdays." />
+  <meta name="description" content="SFHS Machine Learning Club — learn ML, build projects, compete, and have fun. Monthly meetings on Thursdays (mostly online). First meeting in Room 1429 (date TBA)." />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
@@ -52,6 +52,7 @@
       <div class="gradient-bg" aria-hidden="true"></div>
     </section>
 
+    <!-- About -->
     <section id="about" class="section">
       <div class="container two-col">
         <div>
@@ -71,17 +72,24 @@
         <aside class="card">
           <h3>Meeting cadence</h3>
           <p>
-            We meet <strong>monthly on Thursdays</strong> after school.
-            See dates below or join the email list for reminders.
+            We meet <strong>monthly on Thursdays</strong>. <strong>Most meetings are online</strong> via
+            <a href="https://meet.google.com/atk-cecp-cma" target="_blank" rel="noopener">Google Meet</a>
+            (<code>atk-cecp-cma</code>). Our <strong>first meeting will be in Room 1429</strong> — date TBA.
           </p>
+          <p class="small">Club Sponsor: <strong>Mrs. Pearce</strong></p>
           <p class="muted small">Tip: Add meetings to your calendar from the Meetings section.</p>
         </aside>
       </div>
     </section>
 
+    <!-- Meetings -->
     <section id="meetings" class="section alt">
       <div class="container">
         <h2>Meetings</h2>
+        <div class="card" style="border-left:3px solid #21d4fd; margin-bottom:1rem;">
+          <strong>Note:</strong> Most meetings are online in Google Meet (<code>atk-cecp-cma</code>).
+          The first meeting will be held in <strong>Room 1429</strong> (date TBA).
+        </div>
         <p class="muted">First Thursday of each month by default. Upcoming six dates auto-generated below.</p>
         <div id="meeting-list" class="cards" role="list" aria-live="polite"></div>
         <details class="tiny">
@@ -92,6 +100,7 @@
       </div>
     </section>
 
+    <!-- Projects -->
     <section id="projects" class="section">
       <div class="container">
         <h2>Projects</h2>
@@ -115,30 +124,32 @@
       </div>
     </section>
 
+    <!-- Officers -->
     <section id="officers" class="section alt">
       <div class="container">
         <h2>Officers</h2>
         <div class="people">
           <figure class="person">
-            <img src="https://placehold.co/240x240" alt="President headshot placeholder" />
-            <figcaption><strong>President</strong><br><span class="muted">Name Here</span></figcaption>
+            <img src="https://placehold.co/240x240?text=Sudhith" alt="Headshot placeholder for President Sudhith Mannuru" />
+            <figcaption><strong>President</strong><br><span class="muted">Sudhith Mannuru</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="https://placehold.co/240x240" alt="Vice President headshot placeholder" />
-            <figcaption><strong>Vice President</strong><br><span class="muted">Name Here</span></figcaption>
+            <img src="https://placehold.co/240x240?text=Renesh" alt="Headshot placeholder for Executive VP Renesh Mylapuram" />
+            <figcaption><strong>Executive VP</strong><br><span class="muted">Renesh Mylapuram</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="https://placehold.co/240x240" alt="Secretary headshot placeholder" />
-            <figcaption><strong>Secretary</strong><br><span class="muted">Name Here</span></figcaption>
+            <img src="https://placehold.co/240x240?text=Sai" alt="Headshot placeholder for VP of Operations Sai" />
+            <figcaption><strong>VP of Operations</strong><br><span class="muted">Sai</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="https://placehold.co/240x240" alt="Treasurer headshot placeholder" />
-            <figcaption><strong>Treasurer</strong><br><span class="muted">Name Here</span></figcaption>
+            <img src="https://placehold.co/240x240?text=Rehaan" alt="Headshot placeholder for VP of Marketing Rehaan" />
+            <figcaption><strong>VP of Marketing</strong><br><span class="muted">Rehaan</span></figcaption>
           </figure>
         </div>
       </div>
     </section>
 
+    <!-- FAQ -->
     <section id="faq" class="section">
       <div class="container">
         <h2>FAQ</h2>
@@ -157,6 +168,7 @@
       </div>
     </section>
 
+    <!-- Join -->
     <section id="join" class="section">
       <div class="container two-col">
         <div>
@@ -179,7 +191,8 @@
         <aside class="card">
           <h3>Questions?</h3>
           <p>Email <a href="mailto:sfhs-ml-club@example.com">sfhs-ml-club@example.com</a></p>
-          <p class="small muted">Or DM us on Instagram: <a href="#" aria-disabled="true">@sfhs_ml_club</a></p>
+          <p class="small muted">Instagram: <a href="https://instagram.com/ml_sfhs" target="_blank" rel="noopener">@ml_sfhs</a></p>
+          <p class="small muted">Most meetings online on Google Meet: <a href="https://meet.google.com/atk-cecp-cma" target="_blank" rel="noopener">meet.google.com/atk-cecp-cma</a> (code: <code>atk-cecp-cma</code>)</p>
         </aside>
       </div>
     </section>
