--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SFHS Machine Learning Club</title>
-  <meta name="description" content="SFHS Machine Learning Club — learn ML, build projects, compete, and have fun. Monthly meetings on Thursdays (mostly online). First meeting in Room 1429 (date TBA)." />
+  <meta name="description" content="SFHS Machine Learning Club — learn ML, build projects, compete, and have fun. Monthly meetings on Thursdays." />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
@@ -52,7 +52,6 @@
       <div class="gradient-bg" aria-hidden="true"></div>
     </section>
 
-    <!-- About -->
     <section id="about" class="section">
       <div class="container two-col">
         <div>
@@ -72,24 +71,18 @@
         <aside class="card">
           <h3>Meeting cadence</h3>
           <p>
-            We meet <strong>monthly on Thursdays</strong>. <strong>Most meetings are online</strong> via
-            <a href="https://meet.google.com/atk-cecp-cma" target="_blank" rel="noopener">Google Meet</a>
-            (<code>atk-cecp-cma</code>). Our <strong>first meeting will be in Room 1429</strong> — date TBA.
+            We meet <strong>monthly on Thursdays</strong> after school in <strong>Room 1429</strong>.  
+            Most meetings will also be held online at  
+            <a href="https://meet.google.com/atk-cecp-cma">Google Meet (Join code: atk-cecp-cma)</a>.
           </p>
-          <p class="small">Club Sponsor: <strong>Mrs. Pearce</strong></p>
           <p class="muted small">Tip: Add meetings to your calendar from the Meetings section.</p>
         </aside>
       </div>
     </section>
 
-    <!-- Meetings -->
     <section id="meetings" class="section alt">
       <div class="container">
         <h2>Meetings</h2>
-        <div class="card" style="border-left:3px solid #21d4fd; margin-bottom:1rem;">
-          <strong>Note:</strong> Most meetings are online in Google Meet (<code>atk-cecp-cma</code>).
-          The first meeting will be held in <strong>Room 1429</strong> (date TBA).
-        </div>
         <p class="muted">First Thursday of each month by default. Upcoming six dates auto-generated below.</p>
         <div id="meeting-list" class="cards" role="list" aria-live="polite"></div>
         <details class="tiny">
@@ -100,7 +93,6 @@
       </div>
     </section>
 
-    <!-- Projects -->
     <section id="projects" class="section">
       <div class="container">
         <h2>Projects</h2>
@@ -124,32 +116,38 @@
       </div>
     </section>
 
-    <!-- Officers -->
     <section id="officers" class="section alt">
       <div class="container">
         <h2>Officers</h2>
         <div class="people">
           <figure class="person">
-            <img src="https://placehold.co/240x240?text=Sudhith" alt="Headshot placeholder for President Sudhith Mannuru" />
+            <img src="https://placehold.co/240x240" alt="Sudhith Mannuru headshot placeholder" />
             <figcaption><strong>President</strong><br><span class="muted">Sudhith Mannuru</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="https://placehold.co/240x240?text=Renesh" alt="Headshot placeholder for Executive VP Renesh Mylapuram" />
+            <img src="https://placehold.co/240x240" alt="Mandeep headshot placeholder" />
+            <figcaption><strong>Co-President</strong><br><span class="muted">Mandeep</span></figcaption>
+          </figure>
+          <figure class="person">
+            <img src="https://placehold.co/240x240" alt="Renesh Mylapuram headshot placeholder" />
             <figcaption><strong>Executive VP</strong><br><span class="muted">Renesh Mylapuram</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="https://placehold.co/240x240?text=Sai" alt="Headshot placeholder for VP of Operations Sai" />
+            <img src="https://placehold.co/240x240" alt="Sai headshot placeholder" />
             <figcaption><strong>VP of Operations</strong><br><span class="muted">Sai</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="https://placehold.co/240x240?text=Rehaan" alt="Headshot placeholder for VP of Marketing Rehaan" />
+            <img src="https://placehold.co/240x240" alt="Rehaan headshot placeholder" />
             <figcaption><strong>VP of Marketing</strong><br><span class="muted">Rehaan</span></figcaption>
+          </figure>
+          <figure class="person">
+            <img src="https://placehold.co/240x240" alt="Mrs. Pearce headshot placeholder" />
+            <figcaption><strong>Club Sponsor</strong><br><span class="muted">Mrs. Pearce</span></figcaption>
           </figure>
         </div>
       </div>
     </section>
 
-    <!-- FAQ -->
     <section id="faq" class="section">
       <div class="container">
         <h2>FAQ</h2>
@@ -168,7 +166,6 @@
       </div>
     </section>
 
-    <!-- Join -->
     <section id="join" class="section">
       <div class="container two-col">
         <div>
@@ -190,9 +187,8 @@
         </div>
         <aside class="card">
           <h3>Questions?</h3>
-          <p>Email <a href="mailto:sfhs-ml-club@example.com">sfhs-ml-club@example.com</a></p>
-          <p class="small muted">Instagram: <a href="https://instagram.com/ml_sfhs" target="_blank" rel="noopener">@ml_sfhs</a></p>
-          <p class="small muted">Most meetings online on Google Meet: <a href="https://meet.google.com/atk-cecp-cma" target="_blank" rel="noopener">meet.google.com/atk-cecp-cma</a> (code: <code>atk-cecp-cma</code>)</p>
+          <p>Email <a href="mailto:sfhsmachinelearning@gmail.com">sfhsmachinelearning@gmail.com</a></p>
+          <p class="small muted">Or DM us on Instagram: <a href="https://instagram.com/ml_sfhs">@ml_sfhs</a></p>
         </aside>
       </div>
     </section>
@@ -208,3 +204,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
