--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
             <figcaption><strong>Executive VP</strong><br><span class="muted">Renesh Mylapuram</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="https://placehold.co/240x240" alt="Sai headshot placeholder" />
-            <figcaption><strong>VP of Operations</strong><br><span class="muted">Sai</span></figcaption>
+            <img src="https://placehold.co/240x240" alt="Sai Devini headshot placeholder" />
+            <figcaption><strong>VP of Operations</strong><br><span class="muted">Sai Devini</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="https://placehold.co/240x240" alt="Rehaan headshot placeholder" />
-            <figcaption><strong>VP of Marketing</strong><br><span class="muted">Rehaan</span></figcaption>
+            <img src="https://placehold.co/240x240" alt="Rehaan Grover headshot placeholder" />
+            <figcaption><strong>VP of Marketing</strong><br><span class="muted">Rehaan Grover</span></figcaption>
           </figure>
           <figure class="person">
             <img src="https://placehold.co/240x240" alt="Mrs. Pearce headshot placeholder" />
