--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
         <aside class="card">
           <h3>Meeting cadence</h3>
           <p>
-            We meet <strong>monthly on Thursdays</strong> after school in <strong>Room 1429</strong>.  
-            Most meetings will also be held online at  
-            <a href="https://meet.google.com/atk-cecp-cma">Google Meet (Join code: atk-cecp-cma)</a>.
+            We meet <strong>monthly on Thursdays at 4:30 PM</strong> in Room 1429.  
+            Most meetings will be online via Google Meet: <a href="https://meet.google.com/atk-cecp-cma">join here</a>.
           </p>
           <p class="muted small">Tip: Add meetings to your calendar from the Meetings section.</p>
         </aside>
@@ -85,11 +84,6 @@
         <h2>Meetings</h2>
         <p class="muted">First Thursday of each month by default. Upcoming six dates auto-generated below.</p>
         <div id="meeting-list" class="cards" role="list" aria-live="polite"></div>
-        <details class="tiny">
-          <summary>Edit schedule rule</summary>
-          <p>Open <code>script.js</code> and change <code>MEETING_RULE</code> to pick
-            <em>first/second/third/fourth/last</em> Thursday.</p>
-        </details>
       </div>
     </section>
 
@@ -121,27 +115,27 @@
         <h2>Officers</h2>
         <div class="people">
           <figure class="person">
-            <img src="https://placehold.co/240x240" alt="Sudhith Mannuru headshot placeholder" />
+            <img src="https://placehold.co/240x240" alt="President headshot placeholder" />
             <figcaption><strong>President</strong><br><span class="muted">Sudhith Mannuru</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="https://placehold.co/240x240" alt="Mandeep headshot placeholder" />
-            <figcaption><strong>Co-President</strong><br><span class="muted">Mandeep</span></figcaption>
+            <img src="https://placehold.co/240x240" alt="Co-President headshot placeholder" />
+            <figcaption><strong>Co-President</strong><br><span class="muted">Mandeep Pathak</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="https://placehold.co/240x240" alt="Renesh Mylapuram headshot placeholder" />
+            <img src="https://placehold.co/240x240" alt="Executive VP headshot placeholder" />
             <figcaption><strong>Executive VP</strong><br><span class="muted">Renesh Mylapuram</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="https://placehold.co/240x240" alt="Sai Devini headshot placeholder" />
+            <img src="https://placehold.co/240x240" alt="VP of Operations headshot placeholder" />
             <figcaption><strong>VP of Operations</strong><br><span class="muted">Sai Devini</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="https://placehold.co/240x240" alt="Rehaan Grover headshot placeholder" />
-            <figcaption><strong>VP of Marketing</strong><br><span class="muted">Rehaan Grover</span></figcaption>
+            <img src="https://placehold.co/240x240" alt="VP of Membership headshot placeholder" />
+            <figcaption><strong>VP of Membership</strong><br><span class="muted">Rehaan Grover</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="https://placehold.co/240x240" alt="Mrs. Pearce headshot placeholder" />
+            <img src="https://placehold.co/240x240" alt="Club Sponsor headshot placeholder" />
             <figcaption><strong>Club Sponsor</strong><br><span class="muted">Mrs. Pearce</span></figcaption>
           </figure>
         </div>
@@ -188,7 +182,7 @@
         <aside class="card">
           <h3>Questions?</h3>
           <p>Email <a href="mailto:sfhsmachinelearning@gmail.com">sfhsmachinelearning@gmail.com</a></p>
-          <p class="small muted">Or DM us on Instagram: <a href="https://instagram.com/ml_sfhs">@ml_sfhs</a></p>
+          <p class="small muted">Or DM us on Instagram: <a href="https://instagram.com/ml_sfhs" target="_blank">@ml_sfhs</a></p>
         </aside>
       </div>
     </section>
@@ -204,4 +198,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
