--- a/index.html
+++ b/index.html
@@ -126,36 +126,33 @@
 
     <!-- Officers -->
     <section id="officers" class="section alt">
-      <div class="container">
-        <h2>Officers</h2>
-        <div class="people">
-          <figure class="person">
-            <img src="https://placehold.co/240x240?text=Sudhith%20Mannuru" alt="Headshot placeholder for President Sudhith Mannuru" />
-            <figcaption><strong>President</strong><br><span class="muted">Sudhith Mannuru</span></figcaption>
-          </figure>
-          <figure class="person">
-            <img src="https://placehold.co/240x240?text=Mandeep%20Pathak" alt="Headshot placeholder for Co-President Mandeep Pathak" />
-            <figcaption><strong>Co-President</strong><br><span class="muted">Mandeep Pathak</span></figcaption>
-          </figure>
-          <figure class="person">
-            <img src="https://placehold.co/240x240?text=Renesh%20Mylapuram" alt="Headshot placeholder for Executive VP Renesh Mylapuram" />
-            <figcaption><strong>Executive VP</strong><br><span class="muted">Renesh Mylapuram</span></figcaption>
-          </figure>
-          <figure class="person">
-            <img src="https://placehold.co/240x240?text=Sai%20Devineni" alt="Headshot placeholder for VP of Operations Sai Devineni" />
-            <figcaption><strong>VP of Operations</strong><br><span class="muted">Sai Devineni</span></figcaption>
-          </figure>
-          <figure class="person">
-            <img src="https://placehold.co/240x240?text=Rehaan%20Grover" alt="Headshot placeholder for VP of Membership Rehaan Grover" />
-            <figcaption><strong>VP of Membership</strong><br><span class="muted">Rehaan Grover</span></figcaption>
-          </figure>
-          <figure class="person">
-            <img src="https://placehold.co/240x240?text=Mrs.%20Pearce" alt="Headshot placeholder for Club Sponsor Mrs. Pearce" />
-            <figcaption><strong>Club Sponsor</strong><br><span class="muted">Mrs. Pearce</span></figcaption>
-          </figure>
-        </div>
-      </div>
-    </section>
+  <div class="container">
+    <h2>Officers</h2>
+    <div class="people">
+      <figure class="person">
+        <img src="https://placehold.co/240x240" alt="President headshot placeholder" />
+        <figcaption><strong>Co-President</strong><br><span class="muted">Mandeep Pathak</span></figcaption>
+      </figure>
+      <figure class="person">
+        <img src="https://placehold.co/240x240" alt="Co-President headshot placeholder" />
+        <figcaption><strong>Co-President</strong><br><span class="muted">Sudhith Mannuru</span></figcaption>
+      </figure>
+      <figure class="person">
+        <img src="https://placehold.co/240x240" alt="VP of Operations headshot placeholder" />
+        <figcaption><strong>VP of Operations</strong><br><span class="muted">Sai Devineni</span></figcaption>
+      </figure>
+      <figure class="person">
+        <img src="https://placehold.co/240x240" alt="VP of Membership headshot placeholder" />
+        <figcaption><strong>VP of Membership</strong><br><span class="muted">Rehaan Grover</span></figcaption>
+      </figure>
+      <figure class="person">
+        <img src="https://placehold.co/240x240" alt="VP of Tech headshot placeholder" />
+        <figcaption><strong>VP of Tech</strong><br><span class="muted">Nikash Nemmara</span></figcaption>
+      </figure>
+    </div>
+  </div>
+</section>
+
 
     <!-- FAQ -->
     <section id="faq" class="section">
