--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
     <div class="people">
       <figure class="person">
         <img src="https://placehold.co/240x240" alt="President headshot placeholder" />
-        <figcaption><strong>Co-President</strong><br><span class="muted">Mandeep Pathak</span></figcaption>
+        <figcaption><strong>President</strong><br><span class="muted">Sudhith Mannuru</span></figcaption>
       </figure>
       <figure class="person">
         <img src="https://placehold.co/240x240" alt="Co-President headshot placeholder" />
-        <figcaption><strong>Co-President</strong><br><span class="muted">Sudhith Mannuru</span></figcaption>
+        <figcaption><strong>Co-President</strong><br><span class="muted">Mandeep Pathak</span></figcaption>
       </figure>
       <figure class="person">
         <img src="https://placehold.co/240x240" alt="VP of Operations headshot placeholder" />
@@ -149,9 +149,14 @@
         <img src="https://placehold.co/240x240" alt="VP of Tech headshot placeholder" />
         <figcaption><strong>VP of Tech</strong><br><span class="muted">Nikash Nemmara</span></figcaption>
       </figure>
+      <figure class="person">
+        <img src="https://placehold.co/240x240" alt="Club Sponsor headshot placeholder" />
+        <figcaption><strong>Club Sponsor</strong><br><span class="muted">Mrs. Pearce (Room 1428)</span></figcaption>
+      </figure>
     </div>
   </div>
 </section>
+
 
 
     <!-- FAQ -->
