--- a/index.html
+++ b/index.html
@@ -124,38 +124,41 @@
       </div>
     </section>
 
-    <!-- Officers -->
-    <section id="officers" class="section alt">
-  <div class="container">
-    <h2>Officers</h2>
-    <div class="people">
-      <figure class="person">
-        <img src="https://placehold.co/240x240" alt="President headshot placeholder" />
-        <figcaption><strong>President</strong><br><span class="muted">Sudhith Mannuru</span></figcaption>
-      </figure>
-      <figure class="person">
-        <img src="https://placehold.co/240x240" alt="Co-President headshot placeholder" />
-        <figcaption><strong>Co-President</strong><br><span class="muted">Mandeep Pathak</span></figcaption>
-      </figure>
-      <figure class="person">
-        <img src="https://placehold.co/240x240" alt="VP of Operations headshot placeholder" />
-        <figcaption><strong>VP of Operations</strong><br><span class="muted">Sai Devineni</span></figcaption>
-      </figure>
-      <figure class="person">
-        <img src="https://placehold.co/240x240" alt="VP of Membership headshot placeholder" />
-        <figcaption><strong>VP of Membership</strong><br><span class="muted">Rehaan Grover</span></figcaption>
-      </figure>
-      <figure class="person">
-        <img src="https://placehold.co/240x240" alt="VP of Tech headshot placeholder" />
-        <figcaption><strong>VP of Tech</strong><br><span class="muted">Nikash Nemmara</span></figcaption>
-      </figure>
-      <figure class="person">
-        <img src="https://placehold.co/240x240" alt="Club Sponsor headshot placeholder" />
-        <figcaption><strong>Club Sponsor</strong><br><span class="muted">Mrs. Pearce (Room 1428)</span></figcaption>
-      </figure>
-    </div>
-  </div>
-</section>
+<div class="officer">
+  <img src="Sudhith.jpg" alt="Sudhith Mannuru - President">
+  <h3>Sudhith Mannuru</h3>
+  <p>President</p>
+</div>
+
+<div class="officer">
+  <img src="Nikash.jpg" alt="Nikash Nemmara - VP of Tech">
+  <h3>Nikash Nemmara</h3>
+  <p>VP of Tech</p>
+</div>
+
+<div class="officer">
+  <img src="Mandeep.jpg" alt="Mandeep - [Position]">
+  <h3>Mandeep</h3>
+  <p>[Position]</p>
+</div>
+
+<div class="officer">
+  <img src="Rehaan.jpg" alt="Rehaan - [Position]">
+  <h3>Rehaan</h3>
+  <p>[Position]</p>
+</div>
+
+<div class="officer">
+  <img src="Renesh.jpg" alt="Renesh - [Position]">
+  <h3>Renesh</h3>
+  <p>[Position]</p>
+</div>
+
+<div class="officer">
+  <img src="Sai.jpg" alt="Sai Devineni - [Position]">
+  <h3>Sai Devineni</h3>
+  <p>[Position]</p>
+</div>
 
 
 
