--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SFHS Machine Learning Club</title>
-  <meta name="description" content="SFHS Machine Learning Club — learn ML, build projects, compete, and have fun. Monthly meetings on Thursdays at 4:30 PM. Most meetings online; first meeting in Room 1429." />
+  <meta name="description" content="SFHS Machine Learning Club — learn ML, build projects, compete, and have fun. Monthly meetings on Thursdays." />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
@@ -13,14 +13,15 @@
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
 
-  <!-- Header / Nav -->
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="#home" aria-label="SFHS Machine Learning Club home">
         <span class="brand-mark">∑</span> SFHS ML Club
       </a>
       <nav class="nav" aria-label="Primary">
-        <button class="nav-toggle" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle menu">☰</button>
+        <button class="nav-toggle" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle menu">
+          ☰
+        </button>
         <ul id="nav-menu" class="nav-menu">
           <li><a href="#about">About</a></li>
           <li><a href="#meetings">Meetings</a></li>
@@ -34,7 +35,6 @@
   </header>
 
   <main id="main">
-    <!-- Hero -->
     <section id="home" class="hero">
       <div class="container hero-inner">
         <h1>SFHS Machine Learning Club</h1>
@@ -52,7 +52,6 @@
       <div class="gradient-bg" aria-hidden="true"></div>
     </section>
 
-    <!-- About -->
     <section id="about" class="section">
       <div class="container two-col">
         <div>
@@ -72,35 +71,22 @@
         <aside class="card">
           <h3>Meeting cadence</h3>
           <p>
-            We meet <strong>monthly on Thursdays at 4:30 PM</strong>. Most meetings are online via
-            <a href="https://meet.google.com/atk-cecp-cma" target="_blank" rel="noopener">Google Meet</a>
-            (code: <code>atk-cecp-cma</code>). Our first meeting will be in <strong>Room 1429</strong> — date TBA.
+            We meet <strong>monthly on Thursdays</strong> at <b>Room 1428</b>, starting at 4:30 PM.  
+            Most meetings will also be online via <a href="https://meet.google.com/atk-cecp-cma" target="_blank">Google Meet</a>.
           </p>
-          <p class="small">Club Sponsor: <strong>Mrs. Pearce</strong></p>
           <p class="muted small">Tip: Add meetings to your calendar from the Meetings section.</p>
         </aside>
       </div>
     </section>
 
-    <!-- Meetings -->
     <section id="meetings" class="section alt">
       <div class="container">
         <h2>Meetings</h2>
-        <div class="card" style="border-left:3px solid #21d4fd; margin-bottom:1rem;">
-          <strong>Note:</strong> Most meetings are online (Meet code <code>atk-cecp-cma</code>).
-          The first meeting will be held in <strong>Room 1429</strong> (date TBA).
-        </div>
         <p class="muted">First Thursday of each month by default. Upcoming six dates auto-generated below.</p>
         <div id="meeting-list" class="cards" role="list" aria-live="polite"></div>
-        <details class="tiny">
-          <summary>Edit schedule rule</summary>
-          <p>Open <code>script.js</code> and change <code>MEETING_RULE</code> to pick
-            <em>first/second/third/fourth/last</em> Thursday.</p>
-        </details>
       </div>
     </section>
 
-    <!-- Projects -->
     <section id="projects" class="section">
       <div class="container">
         <h2>Projects</h2>
@@ -124,45 +110,43 @@
       </div>
     </section>
 
-<div class="officer">
-  <img src="Sudhith.jpg" alt="Sudhith Mannuru - President">
-  <h3>Sudhith Mannuru</h3>
-  <p>President</p>
-</div>
+    <section id="officers" class="section alt">
+      <div class="container">
+        <h2>Officers</h2>
+        <div class="people">
+          <figure class="person">
+            <img src="Sudhith.jpg" alt="President Sudhith Mannuru" />
+            <figcaption><strong>President</strong><br><span class="muted">Sudhith Mannuru</span></figcaption>
+          </figure>
+          <figure class="person">
+            <img src="Rehaan.jpg" alt="Co-President Rehaan Grover" />
+            <figcaption><strong>Co-President</strong><br><span class="muted">Rehaan Grover</span></figcaption>
+          </figure>
+          <figure class="person">
+            <img src="Renesh.jpg" alt="Executive VP Renesh Mylapuram" />
+            <figcaption><strong>Executive VP</strong><br><span class="muted">Renesh Mylapuram</span></figcaption>
+          </figure>
+          <figure class="person">
+            <img src="Mandeep.jpg" alt="VP of Marketing Mandeep Pathak" />
+            <figcaption><strong>VP of Marketing</strong><br><span class="muted">Mandeep Pathak</span></figcaption>
+          </figure>
+          <figure class="person">
+            <img src="Sai.jpg" alt="VP of Operations Sai Devineni" />
+            <figcaption><strong>VP of Operations</strong><br><span class="muted">Sai Devineni</span></figcaption>
+          </figure>
+          <figure class="person">
+            <img src="Nikash.jpg" alt="VP of Tech Nikash Nemmara" />
+            <figcaption><strong>VP of Tech</strong><br><span class="muted">Nikash Nemmara</span></figcaption>
+          </figure>
+          <figure class="person">
+            <figcaption><strong>Club Sponsor</strong><br>
+              <span class="muted">Mrs. Pearce (Room 1428)</span>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
 
-<div class="officer">
-  <img src="Nikash.jpg" alt="Nikash Nemmara - VP of Tech">
-  <h3>Nikash Nemmara</h3>
-  <p>VP of Tech</p>
-</div>
-
-<div class="officer">
-  <img src="Mandeep.jpg" alt="Mandeep - [Position]">
-  <h3>Mandeep</h3>
-  <p>[Position]</p>
-</div>
-
-<div class="officer">
-  <img src="Rehaan.jpg" alt="Rehaan - [Position]">
-  <h3>Rehaan</h3>
-  <p>[Position]</p>
-</div>
-
-<div class="officer">
-  <img src="Renesh.jpg" alt="Renesh - [Position]">
-  <h3>Renesh</h3>
-  <p>[Position]</p>
-</div>
-
-<div class="officer">
-  <img src="Sai.jpg" alt="Sai Devineni - [Position]">
-  <h3>Sai Devineni</h3>
-  <p>[Position]</p>
-</div>
-
-
-
-    <!-- FAQ -->
     <section id="faq" class="section">
       <div class="container">
         <h2>FAQ</h2>
@@ -181,20 +165,17 @@
       </div>
     </section>
 
-    <!-- Join (Google Form) -->
     <section id="join" class="section">
       <div class="container two-col">
         <div>
           <h2>Join the Club</h2>
-          <p>Sign up to get updates about meetings, workshops, and competitions.</p>
-          <a class="button primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdN4Vd8Fkua2IjVJu-47I0IlmR_-ShikjmstgobjaLuOkILIA/viewform?usp=header" target="_blank" rel="noopener">
-            Fill Out the Google Form
-          </a>
+          <p>Get updates about meetings, workshops, and competitions. We’ll email 1–2 times per month.</p>
+          <p><a class="button primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdN4Vd8Fkua2IjVJu-47I0IlmR_-ShikjmstgobjaLuOkILIA/viewform?usp=header" target="_blank">Join via Google Form</a></p>
         </div>
         <aside class="card">
           <h3>Questions?</h3>
           <p>Email <a href="mailto:sfhsmachinelearning@gmail.com">sfhsmachinelearning@gmail.com</a></p>
-          <p class="small muted">Instagram: <a href="https://instagram.com/ml_sfhs" target="_blank" rel="noopener">@ml_sfhs</a></p>
+          <p class="small muted">Or DM us on Instagram: <a href="https://instagram.com/ml_sfhs" target="_blank">@ml_sfhs</a></p>
         </aside>
       </div>
     </section>
@@ -207,7 +188,6 @@
     </div>
   </footer>
 
-  <!-- cache-bust with ?v=2 so browsers pull the new JS -->
-  <script src="script.js?v=2"></script>
+  <script src="script.js"></script>
 </body>
 </html>
